# octo-manga-automate

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
src/: app.py  config.py  loader.py
src/backend/: cache.py  driver.py  entities.py  exceptions.py  manga_source.py  parser.py  readmanga.py  reply_render.py
src/backend/publisher/: __init__.py  _telegraph.py  publisher.py  renderer.py
src/backend/templates/: chapter.html  manga_info.html  ready_chapter_reply.html
src/bot/: __init__.py
src/bot/handlers/: __init__.py  chapters.py  info.py  manga_info.py  search.py  start.py
src/bot/keyboards/: manga_info.py  search_keyboard.py
src/bot/states/: __init__.py  by_number.py
src/database/: __init__.py  database.py
src/utils/: __init__.py  redis_.py
users/: schema.py
